# nanoOmni

./: .gitignore  pyproject.toml
configs/: qwen25_omni.yaml  qwen3_omni.yaml
docs/superpowers/plans/: 2026-04-14-nanoOmni-implementation.md  2026-04-22-online-engine-skeleton.md
docs/superpowers/specs/: 2026-04-14-nanoOmni-design.md  2026-04-22-online-engine-design.md
examples/: benchmark.py  benchmark_plot.py  online_run.py  run.py
nano_omni/: __init__.py  pipeline.py  types.py
nano_omni/kv_cache/: __init__.py  manager.py
nano_omni/models/: __init__.py  registry.py
nano_omni/models/qwen_omni/: __init__.py  builder.py  code2wav.py  config.py  loader.py  qwen25_code2wav_stage.py  qwen25_converters.py  qwen25_talker_stage.py  qwen3_converters.py  talker.py  thinker.py
nano_omni/online/: __init__.py  engine.py  types.py
nano_omni/scheduler/: __init__.py  scheduler.py
nano_omni/stage/: __init__.py  ar_stage.py  base.py  codec_stage.py
tests/: __init__.py  test_ar_stage.py  test_codec_stage.py  test_kv_cache.py  test_online_engine.py  test_online_types.py  test_pipeline.py  test_scheduler.py  test_types.py
tests/models/: __init__.py
tests/models/qwen3_omni/: __init__.py  test_config.py  test_converters.py
